# axum-authnz

./: Cargo.toml  notes.txt
examples/: basic_auth.rs  basic_auth_with_session.rs
src/: lib.rs
src/authentication/: mod.rs
src/authentication/backends/: basic_auth.rs
src/authn/: mod.rs
src/authn/backends/: basic_auth.rs
src/authn/extractors/: mod.rs
src/authn/extractors/backends/: header.rs
src/authorization/: mod.rs
src/authorization/backends/: and_authorization_backend.rs  login_backend.rs  mod.rs  or_authorization_backend.rs  role_authorization_backend.rs
src/authz/: mod.rs
src/authz/backends/: combinators.rs  login.rs  mod.rs  role.rs
src/transform/: mod.rs
src/transform/backends/: header_auth_proof_transformer.rs  header_authn_proof_transformer.rs  mod.rs  session_auth_proof_transformer.rs  session_authn_proof_transformer.rs
