[package]
name = "axum-authnz"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
base64 = "0.22.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["std"] }
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-sessions = "0.12.2"

[dev-dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"
